--- a/business-application-service/src/main/resources/templates/booking.html
+++ b/business-application-service/src/main/resources/templates/booking.html
@@ -3,7 +3,7 @@
 <head>
 <title>Simple booking interface</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="css/booking.css">
+<link rel="stylesheet" type="text/css" href="/css/booking.css">
 </head>
 <body>
 		<div class="center">
@@ -34,7 +34,7 @@
 				<tr>
 					<td><input type="submit" value="Search"></td>
 					<td><input type="reset" value="Clean"></td>
-				<tr>
+				</tr>
 			</table>
 		</form>
 </body>
